--- a/configs/trainer/default.yaml
+++ b/configs/trainer/default.yaml
@@ -3,9 +3,9 @@ _target_: pytorch_lightning.Trainer
 default_root_dir: ${paths.output_dir}
 
 min_epochs: 1 # prevents early stopping
-max_epochs: 10
+max_epochs: 100000
 
-accelerator: cpu
+accelerator: gpu
 devices: 1
 
 # mixed precision for extra speed-up
