--- a/configs/callbacks/default.yaml
+++ b/configs/callbacks/default.yaml
@@ -1,16 +1,16 @@
 defaults:
   - model_checkpoint.yaml
-  # - early_stopping.yaml
   - model_summary.yaml
   - rich_progress_bar.yaml
+  - lr_monitor.yaml
   - _self_
 
 model_checkpoint:
   dirpath: ${paths.output_dir}/checkpoints
   filename: "epoch_{epoch:03d}"
-  monitor: "val/err"
+  monitor: "val/loss"
   mode: "min"
-  save_last: True
+  save_last: False
   auto_insert_metric_name: False
 
 # early_stopping:
