--- a/configs/datamodule/ms.yaml
+++ b/configs/datamodule/ms.yaml
@@ -2,5 +2,9 @@ _target_: deepmc.datamodules.ms_datamodule.MSDataModule
 data_dir: ${paths.data_dir}
 batch_size: 512
 topology: [0, 0, 0, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 9, 9, 12, 13, 14, 16, 17, 18, 19, 20, 21]
+ms_preprocess: False
+ts_encoder_ckpt_dir: # Add ckpt dir
+mc_encoder_ckpt_dir: # Add ckpt dir
+mo_encoder_ckpt_dir: # Add ckpt dir
 num_workers: 1
 pin_memory: True
