--- a/configs/datamodule/ms.yaml
+++ b/configs/datamodule/ms.yaml
@@ -3,8 +3,8 @@ data_dir: ${paths.data_dir}
 batch_size: 512
 topology: [0, 0, 0, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 9, 9, 12, 13, 14, 16, 17, 18, 19, 20, 21]
 ms_preprocess: False
-ts_encoder_ckpt_dir: # Add ckpt dir
-mc_encoder_ckpt_dir: # Add ckpt dir
-mo_encoder_ckpt_dir: # Add ckpt dir
+ts_encoder_ckpt_dir: ${paths.root_dir}/logs/train/runs/2022-08-02_08-28-04/checkpoints/epoch_99982.ckpt
+mc_encoder_ckpt_dir: ${paths.root_dir}/logs/train/runs/2022-08-04_06-10-59/checkpoints/epoch_5760.ckpt
+mo_encoder_ckpt_dir: ${paths.root_dir}/logs/train/runs/2022-08-04_07-36-53/checkpoints/epoch_829.ckpt
 num_workers: 1
 pin_memory: True
